# Lie_Detector

./: CMakeLists.txt  README.md  gcloud_key.json  last_db.psql  main.cpp  predict_cup.py  requirements.txt
Questions/: guess1  guess2  guess3  start
Questions/Cup1/: Q8  audio  audio(13)  audio(16)  audio(3)  audio(6)
Questions/Cup2/: audio(1)  audio(14)  audio(17)  audio(4)  audio(7)
Questions/Cup3/: audio(15)  audio(18)  audio(2)  audio(5)  audio(8)
Questions/NotFirst/: audio(1)  audio(10)  audio(12)  audio(9)
Questions/Random/: audio  audio(11)
Scripts/: PSQLDB_map.py  SGDscript.py  data_tsne.py  get_audio.py  get_audio_features.py  get_balance_features.py  plot_audio_features.py  plot_barycenter_anim.py  plot_barycenter_static.py  tensorboard_plot.py  text_to_speech.py
